<resources>
    <string name="app_name">BankingAppV8</string>
    <string name="enter_dni">Ingrese su DNI</string>
    <string name="enter_password">Ingrese su contraseña</string>
    <string name="login_btn">Ingresar</string>
    <string name="api_url">http://192.168.1.6:8000</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_accounts">Tus cuentas</string>
    <string name="loading">Cargando...</string>
    <string name="my_accounts">Mis cuentas</string>
    <string name="transfer">Transferencias</string>
    <string name="bank_name">BCT</string>
    <string name="dni_error">DNI requerido</string>
    <string name="password_error">Contraseña requerida</string>
    <string name="origin_account">Cuenta de origen</string>
    <string name="destination_account">Cuenta de destino</string>
    <string name="select">Seleccionar</string>
    <string name="amountTile">Monto</string>
    <string name="amountHint">0.00</string>
    <string name="accountHint">XXXX-XXXX-XXXX-XXXX</string>
</resources>
