<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/origin_account"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold" />

            <Button
                android:id="@+id/select_account_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/colorPrimary"
                android:text="@string/select"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/accounts_selection_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/origin_acount_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:padding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_nameAccount_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cuenta sueldo"
                    android:textColor="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/main_from_account_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4444-5555-6666-1412" />

            </LinearLayout>

            <TextView
                android:id="@+id/main_amountAccount_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="S/. 5000.00"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/amount_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="0dp">

            <TextView

                android:id="@+id/amount_title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/amountTile"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/amount_transfer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/amountHint"
                android:inputType="textPersonName|number" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_account_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="0dp">

            <TextView

                android:id="@+id/other_account_title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/destination_account"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/to_account_p1_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/accountHint"
                    android:inputType="number"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/to_account_p2_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/accountHint"
                    android:inputType="number"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/to_account_p3_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/accountHint"
                    android:inputType="number"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/to_account_p4_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/accountHint"
                    android:inputType="number"
                    android:maxLength="4" />
            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/transfer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="Transferir"
            android:textColor="@android:color/white" />


    </LinearLayout>


</FrameLayout>